--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 logs
 *.log
 npm-debug.log*
+.DS_STORE
 
 # Runtime data
 pids
@@ -39,3 +40,6 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Ignore build
+/build
