--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "metalsmith-permalinks": "^0.5.0"
   },
   "devDependencies": {
+    "metalsmith-assets": "^0.1.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.3"
