--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "static-site-example",
+  "name": "joe-wroten-portfolio",
   "private": true,
   "scripts": {
-    "build": "make build"
+    "build": "npm run vendor && make build",
+    "vendor": "mkdir -p build && cp ./node_modules/lemonade-grid/css/lemonade.min.css ./build"
   },
   "dependencies": {
     "handlebars": "^4.0.5",
+    "lemonade-grid": "^2.1.0",
     "metalsmith": "^2.1.0",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0"
   },
   "devDependencies": {
-    "metalsmith-assets": "^0.1.0",
+    "metalsmith-collections": "^0.7.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.3"
