--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "npm run vendor && make build",
     "vendor": "mkdir -p build && cp ./node_modules/toast-grid/css/grid.css ./build",
-    "deploy": "aws s3 sync . s3://www.joewroten.com"
+    "deploy": "aws s3 sync ./build s3://www.joewroten.com"
   },
   "dependencies": {
     "handlebars": "^4.0.5",
