--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   },
   "devDependencies": {
     "metalsmith-collections": "^0.7.0",
-    "metalsmith-sass": "^1.3.0",
-    "metalsmith-serve": "0.0.7",
-    "metalsmith-watch": "^1.0.3"
+    "metalsmith-sass": "^1.3.0"
   }
 }
