--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "joe-wroten-portfolio",
   "private": true,
-  "scripts": {
-  },
-  "dependencies": {
-  },
+  "scripts": {},
+  "dependencies": {},
   "devDependencies": {
+    "axios": "^0.18.0",
+    "fs-extra": "^7.0.1",
+    "handlebars": "^4.0.12"
   }
 }
