--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "axios": "^0.18.0",
+    "chalk": "^2.4.1",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.0.12",
     "marked": "^0.5.2"
