--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "chalk": "^2.4.1",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.0.12",
-    "marked": "^0.5.2"
-  }
+    "marked": "^0.5.2",
+    "svgdir2sprite": "^1.0.2"
+  },
+  "dependencies": {}
 }
