Index sort by updatedAt

--- a/src/pages/finx.json
+++ b/src/pages/finx.json
@@ -1,6 +1,7 @@
 {
   "name": "Innovating in FinX",
   "description": "Stronger communities w/ better financial tools.",
+  "updatedAt": "2019-01-30T00:00:00Z",
   "pageType": "work-history",
   "repositoryTopics": {
     "edges": [
