Organizations and urls filled in

--- a/src/pages/finx.json
+++ b/src/pages/finx.json
@@ -1,5 +1,7 @@
 {
   "name": "Innovating in FinX",
+  "organization": "Q2ebanking",
+  "url": "https://www.q2ebanking.com/",
   "description": "Stronger communities w/ better financial tools.",
   "updatedAt": "2019-01-30T00:00:00Z",
   "pageType": "work-history",
